[package]
name = "tower-grpc-build"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"

[dependencies]
codegen = { git = "https://github.com/carllerche/codegen" }
prost-build = { git="https://github.com/danburkert/prost.git", rev="ab9f0c65c5466ac91ca551ed0e04b2eddb0c609c" }
heck = "0.3"

[features]
default = ["tower-h2"]
tower-h2 = []
